<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
  >

  <TextView
    android:id="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:textStyle="bold"
    android:background="@color/colorAccent"
    android:alpha="0.8"
    android:textColor="@android:color/black"
    android:textSize="@dimen/font_size_title"

    />

  <ImageView
    android:id="@+id/backdrop_path"
    android:layout_below="@+id/title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@mipmap/imagedefault"
    android:scaleType="fitXY"
    />


  <ScrollView
    android:layout_below="@+id/backdrop_path"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
      android:id="@+id/detailsMovie"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/activity_horizontal_margin"
      >

      <TextView
        android:id="@+id/lbl_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_release_date"
        android:textSize="@dimen/font_size_subtitle"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

      <TextView
        android:id="@+id/txt_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_toRightOf="@+id/lbl_release_date"
        />

      <TextView
        android:id="@+id/lbl_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_release_date"
        android:text="@string/lbl_popularity"
        android:textColor="@color/colorWhite"
        android:layout_alignStart="@+id/lbl_release_date"
        android:layout_alignEnd="@+id/lbl_release_date"
        android:textSize="@dimen/font_size_subtitle"
        android:textStyle="bold"
        />

      <TextView
        android:id="@+id/txt_popularity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/txt_release_date"
        android:layout_toRightOf="@+id/lbl_release_date"
        />


      <TextView
        android:id="@+id/lbl_vote_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_vote_count"

        android:textColor="@color/colorWhite"
        android:layout_below="@+id/txt_popularity"
        android:layout_alignStart="@+id/lbl_release_date"
        android:layout_alignEnd="@+id/lbl_release_date"
        android:textSize="@dimen/font_size_subtitle"
        android:textStyle="bold"
        />

      <TextView
        android:id="@+id/txt_vote_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/txt_popularity"
        android:layout_toRightOf="@+id/lbl_release_date"
        />


      <TextView
        android:id="@+id/lbl_vote_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_vote_average"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:layout_below="@+id/txt_vote_count"
        android:textSize="@dimen/font_size_subtitle"
        android:textStyle="bold"
        />

      <RatingBar
        android:id="@+id/bar_vote_average"
        android:layout_below="@+id/lbl_vote_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:isIndicator="true"
        android:layout_centerHorizontal="true"
        />


      <TextView
        android:enabled="false"
        android:id="@+id/lbl_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_overview"
        android:textColor="@color/colorWhite"
        android:layout_below="@+id/bar_vote_average"
        android:layout_alignStart="@+id/lbl_release_date"
        android:layout_alignEnd="@+id/lbl_release_date"
        android:textSize="@dimen/font_size_subtitle"
        android:textStyle="bold"
        />

      <TextView
        android:id="@+id/txt_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_overview"
        android:textColor="@color/colorWhite"
        />
    </RelativeLayout>
  </ScrollView>


</RelativeLayout>